test/sema/positive/literals.impala
fn main() -> () {
    // check wethe types match
    { let i: i8  = 0i8; }
    { let i: i16 = 0i16; }
    { let i: i32 = 0i32; }
    { let i: i64 = 0i64; }
    { let i: u8  = 0u8; }
    { let i: u16 = 0u16; }
    { let i: u32 = 0u32; }
    { let i: u64 = 0u64; }
    { let f: f32 = 0f32; }
    { let f: f64 = 0f64; }
    { let i: i32 = 0b01; }
    { let i: i32 = 0b0_1; }
    { let i: i32 = 0b01_; }
    { let i: i32 = 0o0_1234567; }
    { let i: i32 = 0o01234567_; }
    { let i: i32 = 0x0_123456789abcdef; }
    { let i: i32 = 0x0123456789abcdef_; }
    { let f: f64 = 1e1; }
    { let f: f64 = 1e-1; }
    { let f: f64 = 1e+1; }
    { let f: f64 = 1.7e1; }
    { let f: f64 = 1.8e-1; }
    { let f: f64 = 1.9e+1; }
    { let f: f64 = 1.7e_4; }
    { let f: f64 = 1.8e-_5; }
    { let f: f64 = 1.9e+_6; }
}
